--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,33 @@
 aiohttp==3.9.3
 aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.9.0
 attrs==23.2.0
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+distro==1.9.0
 frozenlist==1.4.1
+google-auth==2.40.2
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.6
+jiter==0.10.0
 multidict==6.0.5
+openai==1.84.0
 py-cord==2.5.0
-yarl==1.9.4
-aiohttp==3.9.3
-aiosignal==1.3.1
-attrs==23.2.0
-frozenlist==1.4.1
-idna==3.6
-multidict==6.0.5
-py-cord==2.5.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.5
+pydantic_core==2.33.2
 python-dotenv==1.0.1
+requests==2.32.3
+rsa==4.9.1
+sniffio==1.3.1
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+urllib3==2.4.0
+websockets==15.0.1
 yarl==1.9.4
